--- a/index.html
+++ b/index.html
@@ -1,34 +1,302 @@
-<h1 align="center">
-Hi 👋, I’m Nilesh Hadalgi
-</h1>
-<h3 align="center">
-A passionate python developer from India
-</h3>
-<ul>
-<li><p>🔭 I’m currently working on <strong>web based app</strong></p></li>
-<li><p>🌱 I’m currently learning <strong>docker,kubernets,aws,python,SQL,django</strong></p></li>
-<li><p>👯 I’m looking to collaborate on <strong>web based learning resource manager</strong></p></li>
-<li><p>🤝 I’m looking for help with <strong>web based learning resource manager</strong></p></li>
-<li><p>💬 Ask me about <strong>docker,kubernets,aws,python,SQL,django</strong></p></li>
-<li><p>📫 How to reach me <strong>nileshhadalgi3@gmail.com</strong></p></li>
-</ul>
-<h3 align="left">
-Connect with me:
-</h3>
-<p align="left">
-</p>
-<h3 align="left">
-Languages and Tools:
-</h3>
-<p align="left">
-<a href="https://www.arduino.cc/" target="_blank" rel="noreferrer"> <img src="https://cdn.worldvectorlogo.com/logos/arduino-1.svg" alt="arduino" width="40" height="40"/> </a> <a href="https://aws.amazon.com" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="aws" width="40" height="40"/> </a> <a href="https://getbootstrap.com" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg" alt="bootstrap" width="40" height="40"/> </a> <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" width="40" height="40"/> </a> <a href="https://www.djangoproject.com/" target="_blank" rel="noreferrer"> <img src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="django" width="40" height="40"/> </a> <a href="https://www.docker.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="40" height="40"/> </a> <a href="https://www.figma.com/" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/figma/figma-icon.svg" alt="figma" width="40" height="40"/> </a> <a href="https://flask.palletsprojects.com/" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-icon.svg" alt="flask" width="40" height="40"/> </a> <a href="https://golang.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/go/go-original.svg" alt="go" width="40" height="40"/> </a> <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/> </a> <a href="https://ifttt.com/" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/ifttt/ifttt-ar21.svg" alt="ifttt" width="40" height="40"/> </a> <a href="https://www.adobe.com/in/products/illustrator.html" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/adobe_illustrator/adobe_illustrator-icon.svg" alt="illustrator" width="40" height="40"/> </a> <a href="https://kubernetes.io" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/kubernetes/kubernetes-icon.svg" alt="kubernetes" width="40" height="40"/> </a> <a href="https://www.linux.org/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/> </a> <a href="https://www.mysql.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/> </a> <a href="https://opencv.org/" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/opencv/opencv-icon.svg" alt="opencv" width="40" height="40"/> </a> <a href="https://pandas.pydata.org/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/2ae2a900d2f041da66e950e4d48052658d850630/icons/pandas/pandas-original.svg" alt="pandas" width="40" height="40"/> </a> <a href="https://www.photoshop.com/en" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/photoshop/photoshop-line.svg" alt="photoshop" width="40" height="40"/> </a> <a href="https://www.python.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="40" height="40"/> </a> <a href="https://scikit-learn.org/" target="_blank" rel="noreferrer"> <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="scikit_learn" width="40" height="40"/> </a> <a href="https://seaborn.pydata.org/" target="_blank" rel="noreferrer"> <img src="https://seaborn.pydata.org/_images/logo-mark-lightbg.svg" alt="seaborn" width="40" height="40"/> </a> <a href="https://www.tensorflow.org" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-icon.svg" alt="tensorflow" width="40" height="40"/> </a>
-</p>
-<figure>
-<img src="https://github-readme-stats.vercel.app/api?username=nileshhadalgi016&amp;theme=vue-dark&amp;show_icons=true&amp;hide_border=true&amp;count_private=true" alt="" /><figcaption>nileshhadalgi016’s Stats</figcaption>
-</figure>
-<figure>
-<img src="https://github-readme-streak-stats.herokuapp.com/?user=nileshhadalgi016&amp;theme=vue-dark&amp;hide_border=true" alt="" /><figcaption>nileshhadalgi016’s Streak</figcaption>
-</figure>
-<figure>
-<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=nileshhadalgi016&amp;theme=vue-dark&amp;show_icons=true&amp;hide_border=true&amp;layout=compact" alt="" /><figcaption>nileshhadalgi016’s Top Languages</figcaption>
-</figure>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nilesh Hadalgi - Links</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            line-height: 1.6;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        .container {
+            max-width: 600px;
+            width: 90%;
+            text-align: center;
+        }
+
+        .profile {
+            margin-bottom: 20px;
+        }
+
+        .profile-img {
+            width: 96px;
+            height: 96px;
+            border-radius: 50%;
+            border: 3px solid white;
+            margin-bottom: 15px;
+        }
+
+        .profile h1 {
+            color: white;
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .profile p {
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .link {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 15px 20px;
+            border-radius: 10px;
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            transition: transform 0.2s, background 0.2s;
+        }
+
+        .link:hover {
+            transform: translateY(-2px);
+            background: white;
+        }
+
+        .link i {
+            font-size: 20px;
+        }
+
+        footer {
+            margin-top: 30px;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="profile">
+            <img src="profile.png" alt="Profile Picture" class="profile-img">
+            <h1>Nilesh Hadalgi | Techie Programmer</h1>
+            <p>👨‍💻 Python Developer | Content Creator<br>
+                📚 Sharing programming tips & tutorials</p>
+        </div>
+
+        <!-- Replace old links div with new social-icons div -->
+        <div class="social-icons">
+            <a href="#" class="social-icon" title="Website">
+                <i class="fas fa-globe"></i>
+            </a>
+            <a href="#" class="social-icon" title="YouTube">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#" class="social-icon" title="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="social-icon" title="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social-icon" title="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="social-icon" title="Blog">
+                <i class="fas fa-blog"></i>
+            </a>
+        </div>
+
+        <!-- New Recommended Links Section -->
+        <div class="recommended-links">
+            <h2 style="color: white; margin: 30px 0 20px;">Courses & Resources</h2>
+            <div class="links-list">
+                <a href="#" class="course-link">
+                    <i class="fas fa-graduation-cap"></i>
+                    Python Mastery Course
+                </a>
+                <a href="#" class="course-link">
+                    <i class="fas fa-code"></i>
+                    JavaScript Essentials
+                </a>
+                <a href="#" class="course-link">
+                    <i class="fas fa-database"></i>
+                    SQL for Developers
+                </a>
+                <a href="#" class="course-link">
+                    <i class="fas fa-cloud"></i>
+                    Cloud Computing
+                </a>
+                <a href="#" class="course-link">
+                    <i class="fas fa-robot"></i>
+                    AI & ML Course
+                </a>
+            </div>
+        </div>
+
+        <!-- New Reels Showcase Section -->
+        <h2 style="color: white; margin: 30px 0 20px;">Popular Reels</h2>
+        <div class="reels-container">
+            <div class="reels-showcase">
+                <!-- Reel Card 1 -->
+                <div class="reel-card">
+                    <video 
+                        class="reel-video"
+                        src="reel.mp4"
+                        poster="thumbnail1.jpg"
+                        autoplay
+                        muted
+                        loop
+                        playsinline
+                    ></video>
+                    <div class="reel-info">
+                        <div class="reel-title">Python Tips & Tricks</div>
+                        <div class="reel-views">
+                            <i class="fas fa-eye"></i>
+                            10.5K views
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Reel Card 2 -->
+                <div class="reel-card">
+                    <video 
+                        class="reel-video"
+                        src="reel2.mp4"
+                        poster="thumbnail2.jpg"
+                        autoplay
+                        muted
+                        loop
+                        playsinline
+                    ></video>
+                    <div class="reel-info">
+                        <div class="reel-title">JavaScript Hacks</div>
+                        <div class="reel-views">
+                            <i class="fas fa-eye"></i>
+                            8.2K views
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Reel Card 3 -->
+                <div class="reel-card">
+                    <video 
+                        class="reel-video"
+                        src="reel3.mp4"
+                        poster="thumbnail3.jpg"
+                        autoplay
+                        muted
+                        loop
+                        playsinline
+                    ></video>
+                    <div class="reel-info">
+                        <div class="reel-title">Coding Best Practices</div>
+                        <div class="reel-views">
+                            <i class="fas fa-eye"></i>
+                            15.7K views
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="scroll-indicator">
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
+
+        <!-- New Brands Section -->
+        <div class="brands-section">
+            <h2 style="color: white; margin: 30px 0 20px;">Brands I've Worked With</h2>
+            <div class="brands-grid">
+                <div class="brand-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" 
+                         alt="Google" 
+                         class="brand-logo">
+                </div>
+                <div class="brand-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Microsoft_logo_%282012%29.svg" 
+                         alt="Microsoft" 
+                         class="brand-logo">
+                </div>
+                <div class="brand-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" 
+                         alt="Apple" 
+                         class="brand-logo">
+                </div>
+                <div class="brand-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Meta_Platforms_Inc._logo.svg" 
+                         alt="Meta" 
+                         class="brand-logo">
+                </div>
+                <div class="brand-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" 
+                         alt="AWS" 
+                         class="brand-logo">
+                </div>
+                <div class="brand-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4d/OpenAI_Logo.svg" 
+                         alt="OpenAI" 
+                         class="brand-logo">
+                </div>
+            </div>
+        </div>
+         <!-- New Affiliate Links Section -->
+         <div class="affiliate-section">
+            <h2 style="color: white; margin-bottom: 15px;">My Favorite Tools</h2>
+            <div class="affiliate-buttons">
+                <a href="#" class="affiliate-btn">
+                    <i class="fas fa-laptop-code"></i>
+                    VS Code Setup
+                </a>
+                <a href="#" class="affiliate-btn">
+                    <i class="fas fa-microphone"></i>
+                    Recording Gear
+                </a>
+                <a href="#" class="affiliate-btn">
+                    <i class="fas fa-camera"></i>
+                    Camera Setup
+                </a>
+                <a href="#" class="affiliate-btn">
+                    <i class="fas fa-book"></i>
+                    Learning Resources
+                </a>
+                <a href="#" class="affiliate-btn">
+                    <i class="fas fa-tools"></i>
+                    Dev Tools
+                </a>
+            </div>
+        </div>
+
+        <footer>
+            <p>© 2024 Nilesh Hadalgi</p>
+        </footer>
+    </div>
+</body>
+</html>
