--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nilesh Hadalgi - Links</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -130,14 +130,11 @@
             <a href="#" class="social-icon" title="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#" class="social-icon" title="Blog">
-                <i class="fas fa-blog"></i>
-            </a>
         </div>
 
         <!-- New Recommended Links Section -->
+        <h2 class="section-title">Courses & Resources</h2>
         <div class="recommended-links">
-            <h2 style="color: white; margin: 30px 0 20px;">Courses & Resources</h2>
             <div class="links-list">
                 <a href="#" class="course-link">
                     <i class="fas fa-graduation-cap"></i>
@@ -163,7 +160,7 @@
         </div>
 
         <!-- New Reels Showcase Section -->
-        <h2 style="color: white; margin: 30px 0 20px;">Popular Reels</h2>
+        <h2 class="section-title">Popular Reels</h2>
         <div class="reels-container">
             <div class="reels-showcase">
                 <!-- Reel Card 1 -->
@@ -232,8 +229,8 @@
         </div>
 
         <!-- New Brands Section -->
+        <h2 class="section-title">Brands I've Worked With</h2>
         <div class="brands-section">
-            <h2 style="color: white; margin: 30px 0 20px;">Brands I've Worked With</h2>
             <div class="brands-grid">
                 <div class="brand-item">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" 
@@ -269,7 +266,7 @@
         </div>
          <!-- New Affiliate Links Section -->
          <div class="affiliate-section">
-            <h2 style="color: white; margin-bottom: 15px;">My Favorite Tools</h2>
+            <h2 class="section-title">My Favorite Tools</h2>
             <div class="affiliate-buttons">
                 <a href="#" class="affiliate-btn">
                     <i class="fas fa-laptop-code"></i>
